--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "test": "jest",
     "typescript": "tsc --noEmit",
     "stylelint": "stylelint 'src/**/*.ts'",
-    "eslint": "eslint --ext .js, .jsx, .ts, .tsx .",
+    "eslint": "eslint --ext .js,.ts,.tsx .",
     "lint": "npm run typescript && npm run eslint && npm run stylelint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "dependencies": {
     "next": "9.4.0",
